--- a/VisualSort.html
+++ b/VisualSort.html
@@ -79,7 +79,7 @@ integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
-<title>Sorting Visualiser</Title>
+<title>Sorting Visualiser</title>
 <body>
 <!-- Navigation bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -92,6 +92,8 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 			<a class="nav-item nav-link" href="index.html">Home</a>
 			<a class="nav-item active nav-link" href="VisualSort.html">Sorting Visualiser</a>
 			<a class="nav item nav-link" href="dashboard.html">Dashboard</a>
+			<a class="nav item nav-link" href="DBMS.html">DBMS</a>
+			<a class="nav item nav-link" href="Game.html">Game</a>
 		</div>
 	</div>
 </nav>
