--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ p {
 	font-size: 3vh;
 }
 
+.display-4 {
+	margin-top: -0.5rem;
+}
+
 .nav-link {
 	color: black;
 }
@@ -28,6 +32,14 @@ p {
 ::-webkit-scrollbar {
     display: none;
 }
+
+.fade-in
+{
+    opacity:0;
+}
+div.hidden {
+    display: none;
+}
 </style>
 <!-- BootStrap code from copied/modified from BootStrap documentation -->
 <meta charset="utf-8">
@@ -36,13 +48,15 @@ p {
 <link rel="stylesheet preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
 integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
-integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.js"
+  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+  crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.2/lazysizes.min.js" async></script>
 </head>
-<title>Home</Title>
+<title>Home</title>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<div class="navbar-brand">Online Apps</div>
@@ -54,147 +68,178 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 			<a class="nav-item active nav-link" href="index.html">Home</a>
 			<a class="nav-item nav-link" href="VisualSort.html">Sorting Visualiser</a>
 			<a class="nav item nav-link" href="dashboard.html">Dashboard</a>
+			<a class="nav item nav-link" href="DBMS.html">DBMS</a>
+			<a class="nav item nav-link" href="Game.html">Game</a>
 		</div>
 	</div>
 </nav>
 <!-- Body Container -->
-<div class="container-fluid">
-	<div class="row justify-content-center">
-		<div class="col p-2 bg-light text-dark text-center"><h1 class="display-4">Projects</h1>
-		<div class="card-group my-auto mx-auto" style="width:97.5%;">
-			<div class="card">
-				<img class="card-img-top lazyload" data-src="Images\VisualSort.jpg" srcset="Images\VisualSortSmall.jpg 477w, Images\VisualSort.jpg 1024w" sizes="50vw" alt="Card image cap">
-				<div class="card-body text-left small">
-					<h4 class="card-title">Sorting Visualiser</h4>
-					<p class="card-text">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
-					<a href="VisualSort.html" class="stretched-link"></a>
+<div class="container-fluid justify-content-center text-center bg-light text">
+	<div class="row hidden">
+		<div class="col">
+			<h1 class="display-4" id="test">Projects</h1>
+			<div class="card-group my-auto mx-auto" style="width:97.5%;">
+				<div class="card">
+					<img class="card-img-top lazyload" data-src="Images\VisualSort.jpg" srcset="Images\VisualSortSmall.jpg 477w, Images\VisualSort.jpg 1024w" sizes="50vw" alt="Card image cap">
+					<div class="card-body text-left small">
+						<h4 class="card-title">Sorting Visualiser</h4>
+						<p class="card-text">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
+						<a href="VisualSort.html" class="stretched-link"></a>
+					</div>
+				</div>
+				<div class="card">
+					<img class="card-img-top lazyload" data-src="Images\Dashboard.jpg" srcset="Images\DashboardSmall.jpg 480w, Images\Dashboard.jpg 1024w" sizes="50vw" alt="Card image cap">
+					<div class="card-body text-left small">
+						<h4 class="card-title">Dashboard</h4>
+						<p class="card-text">This webpage consists of graphs and tables to show data, which can be edited and is saved locally on your device.</p>
+						<a href="dashboard.html" class="stretched-link"></a>
+					</div>
 				</div>
 			</div>
-			<div class="card">
-				<img class="card-img-top lazyload" data-src="Images\Dashboard.jpg" srcset="Images\DashboardSmall.jpg 480w, Images\Dashboard.jpg 1024w" sizes="50vw" alt="Card image cap">
-				<div class="card-body text-left small">
-					<h4 class="card-title">Dashboard</h4>
-					<p class="card-text">This webpage consists of graphs and tables to show data, which can be edited and is saved locally on your device.</p>
-					<a href="dashboard.html" class="stretched-link"></a>
+			<div class="card-group my-auto mx-auto" style="width:97.5%;">
+				<div class="card">
+					<img class="card-img-top lazyload" data-src="Images\DBMS.jpg" srcset="Images\DBMSSmall.jpg 480w, Images\DBMS.jpg 1400w" sizes="50vw" alt="Card image cap">
+					<div class="card-body text-left small">
+						<h4 class="card-title">Database Management System</h4>
+						<p class="card-text">This project consists of a website that is connected to a database, where users can add, modify, and remove their information.</p>
+						<a href="DBMS.html" class="stretched-link"></a>
+					</div>
 				</div>
-			</div>
+				<div class="card">
+					<img class="card-img-top lazyload" data-src="Images\Game.jpg" srcset="Images\Game.jpg 480w, Images\Game.jpg 1400w" sizes="50vw" alt="Card image cap">
+					<div class="card-body text-left small">
+						<h4 class="card-title">Tile Based Game</h4>
+						<p class="card-text">This game is a tile based game with RPG elements.</p>
+						<a href="Game.html" class="stretched-link"></a>
+					</div>
+				</div>
+			</div><hr>
 		</div>
-		<hr>
-		<h1 class="display-4">Who Am I?</h1>
-		<p>My name is Sebastiano Fuoco and I am currently studying BSc Computing at University Centre Farnborough
-		currently on track for a "". My ambitions involve working with computers, where in my spare time i enjoy 
-		maintaining my computers and programming. My course is primarily centered around application development and networking. 
-		I have experience within the IT sector as well as knowing some programming languages. My goal is to be within the IT sector helping identify problems for programs and coming up with solutions to fix them,
-		as well as planning out designs and implementing the solutions into the programs. I am currently looking to apply for graduate schemes within
-		the IT sector that will further improve my knowledge and experience, as well as having the ability to progress my career.
-		</p><hr>
-		<nav>
-			<div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
-				<a class="nav-item nav-link active" id="nav-education-tab" data-toggle="tab" href="#nav-education" role="tab" aria-controls="nav-education" aria-selected="true">My Education</a>
-				<a class="nav-item nav-link " id="nav-work-tab" data-toggle="tab" href="#nav-work" role="tab" aria-controls="nav-work" aria-selected="false">Work Experience</a>
-				<a class="nav-item nav-link" id="nav-skills-tab" data-toggle="tab" href="#nav-skills" role="tab" aria-controls="nav-skills" aria-selected="false">Skills</a>
-			</div>
-		</nav>
-		<div class="tab-content small" id="nav-tabContent">
-			<div class="tab-pane fade show active" id="nav-education" role="tabpanel" aria-labelledby="nav-education-tab">
-				<div class="lead">2018-2021 University Centre Farnborough</div>
-				<p>BSc Computing: N/A<br>
-				HND Computing: N/A<br>
-				HNC Computing: D
-				</p>
-				<div class="lead">2016-2018	Woking College</div>
-				<p>IT BTEC Diploma: D*D*<br>
-				A-Level Electronics: A</p>
-				<div class="lead">2012-2016	Tomlinscote School</div>
-				<p> 6 GCSES: (B in Maths & C in English Language)</p>
-			</div>
-			<div class="tab-pane fade" id="nav-work" role="tabpanel" aria-labelledby="nav-work-tab">
-				<div class="lead">2019+ Woking Lawn & Croquet Club</div>
-				<p>Kitchen Staff: Duties include opening up bar, closing bar, cooking, bartending, stocking, and cleaning.</p>
-				<div class="lead">2017 Woking College</div>
-				<p>IT Support Assistant: Duties include replacing printer toners and troubleshooting computers.</p>
-				<div class="lead">2015 Tomlinscote School</div>
-				<p>IT Support Assistant: Duties include setting up computers, installing software on computers, and installing devices on the campus.</p>
-			</div>
-			<div class="tab-pane fade" id="nav-skills" role="tabpanel" aria-labelledby="nav-skills-tab">
-				<div class="container">
-					<div class="row pb-2 ">
-						<div class="col">
-							<p class="lead">Office 365</p>
-						</div>
-						<div class="col-md-10 align-self-center">
-							<div class="progress" style="height:2.25vw;">
-								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">advanced</div>
-							</div>
+	</div>
+	<div class="row fade-in">
+		<div class="col">
+			<h1 class="display-4">Education</h1>
+			<div class="lead">2018-2021 University Centre Farnborough</div>
+			<p>BSc Computing: N/A<br>
+			HND Computing: N/A<br>
+			HNC Computing: D
+			</p>
+			<div class="lead">2016-2018	Woking College</div>
+			<p>IT BTEC Diploma: D*D*<br>
+			A-Level Electronics: A</p>
+			<div class="lead">2012-2016	Tomlinscote School</div>
+			<p> 6 GCSES: grade C and above</p><hr>
+		</div>
+	</div>
+	<div class="row fade-in">
+		<div class="col">
+			<h1 class="display-4">Work Experience</h1>	
+			<div class="lead">2019+ Woking Lawn & Croquet Club</div>
+			<p>Kitchen Staff: Duties include opening up bar, closing bar, cooking, bartending, stocking, and cleaning.</p>
+			<div class="lead">2017 Woking College</div>
+			<p>IT Support Assistant: Duties include replacing printer toners and troubleshooting computers.</p>
+			<div class="lead">2015 Tomlinscote School</div>
+			<p>IT Support Assistant: Duties include setting up computers, installing software on computers, and installing devices on the campus.</p><hr>
+		</div>
+	</div>
+	<div class="row fade-in">
+		<div class="col">
+			<h1 class="display-4">Skills</h1>	
+			<div class="container">
+				<div class="row pb-2 ">
+					<div class="col">
+						<p class="lead">Office 365</p>
+					</div>
+					<div class="col-md-10 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">advanced</div>
 						</div>
 					</div>
-					<div class="row pb-2">
-						<div class="col">
-							<p class="lead">Adobe Suite</p>
-						</div>
-						<div class="col-md-10 align-self-center">
-							<div class="progress" style="height:2.25vw;">
-								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
-							</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">Adobe Suite</p>
+					</div>
+					<div class="col-md-10 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
 						</div>
 					</div>
-					<div class="row pb-2">
-						<div class="col">
-							<p class="lead">Python</p>
-						</div>
-						<div class="col-md-10 align-self-center">
-							<div class="progress" style="height:2.25vw;">
-								<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
-							</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">Python</p>
+					</div>
+					<div class="col-md-10 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
 						</div>
 					</div>
-					<div class="row pb-2">
-						<div class="col">
-							<p class="lead">C++/C#</p>
-						</div>
-						<div class="col-md-10 align-self-center">
-							<div class="progress" style="height:2.25vw;">
-								<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
-							</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">C++/C#</p>
+					</div>
+					<div class="col-md-10 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
 						</div>
 					</div>
-					<div class="row pb-2">
-						<div class="col">
-							<p class="lead">HTML</p>
-						</div>
-						<div class="col-md-10 align-self-center">
-							<div class="progress" style="height:2.25vw;">
-								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">advanced</div>
-							</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">HTML</p>
+					</div>
+					<div class="col-md-10 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">advanced</div>
 						</div>
 					</div>
-					<div class="row pb-2">
-						<div class="col">
-							<p class="lead">CSS</p>
-						</div>
-						<div class="col-md-10 align-self-center">
-							<div class="progress" style="height:2.25vw;">
-								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
-							</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">CSS</p>
+					</div>
+					<div class="col-md-10 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col">
-							<p class="lead">JavaScript</p>
-						</div>
-						<div class="col-md-10 align-self-center">
-							<div class="progress" style="height:2.25vw;">
-								<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
-							</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">JavaScript</p>
+					</div>
+					<div class="col-md-10 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			&nbsp;
 		</div>
 	</div>
 </div>
 </body>
+<script>
+$(document).ready(function () {
+    $('div.hidden').fadeIn(2000);
+});
+$(document).ready(function() {
+/* Every time the window is scrolled ... */
+	$(window).scroll( function(){
+	    /* Check the location of each desired element */
+	    $('.fade-in').each( function(i){
+	        var bottom_of_object = $(this).position().top + $(this).outerHeight()/3;
+	        var bottom_of_window = $(window).scrollTop() + $(window).height();
+	        /* If the object is completely visible in the window, fade it it */
+	        if( bottom_of_window > bottom_of_object ){
+	            $(this).animate({'opacity':'1'},500);
+	        }    
+	    }); 
+	}); 
+});
+</script>
 </html>
 <!-- References
 Navbar = https://getbootstrap.com/docs/4.1/components/navbar/
