Changed website layout
Removed unneeded webpages with links to github projects instead.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,6 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 			<a class="nav-item active nav-link" href="index.html">Home</a>
 			<a class="nav-item nav-link" href="VisualSort.html">Sorting Visualiser</a>
 			<a class="nav item nav-link" href="dashboard.html">Dashboard</a>
-			<a class="nav item nav-link" href="DBMS.html">DBMS</a>
-			<a class="nav item nav-link" href="Game.html">Game</a>
 		</div>
 	</div>
 </nav>
@@ -80,7 +78,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 			<h1 class="display-4" id="test">Projects</h1>
 			<div class="card-group my-auto mx-auto" style="width:97.5%;">
 				<div class="card">
-					<img class="card-img-top lazyload" data-src="Images\VisualSort.jpg" srcset="Images\VisualSortSmall.jpg 477w, Images\VisualSort.jpg 1024w" sizes="50vw" alt="Card image cap">
+					<img class="card-img-top lazyload" data-src="Images\VisualSort.jpg" srcset="Images\VisualSortSmall.jpg 640w, Images\VisualSort.jpg 1024w" sizes="50vw" alt="Card image cap">
 					<div class="card-body text-left small">
 						<h4 class="card-title">Sorting Visualiser</h4>
 						<p class="card-text">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
@@ -88,7 +86,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 					</div>
 				</div>
 				<div class="card">
-					<img class="card-img-top lazyload" data-src="Images\Dashboard.jpg" srcset="Images\DashboardSmall.jpg 480w, Images\Dashboard.jpg 1024w" sizes="50vw" alt="Card image cap">
+					<img class="card-img-top lazyload" data-src="Images\Dashboard.jpg" srcset="Images\DashboardSmall.jpg 640w, Images\Dashboard.jpg 1024w" sizes="50vw" alt="Card image cap">
 					<div class="card-body text-left small">
 						<h4 class="card-title">Dashboard</h4>
 						<p class="card-text">This webpage consists of graphs and tables to show data, which can be edited and is saved locally on your device.</p>
@@ -98,19 +96,19 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 			</div>
 			<div class="card-group my-auto mx-auto" style="width:97.5%;">
 				<div class="card">
-					<img class="card-img-top lazyload" data-src="Images\DBMS.jpg" srcset="Images\DBMSSmall.jpg 480w, Images\DBMS.jpg 1400w" sizes="50vw" alt="Card image cap">
+					<img class="card-img-top lazyload" data-src="Images\DBMS.jpg" srcset="Images\DBMSSmall.jpg 640w, Images\DBMS.jpg 1400w" sizes="50vw" alt="Card image cap">
 					<div class="card-body text-left small">
 						<h4 class="card-title">Database Management System</h4>
 						<p class="card-text">This project consists of a website that is connected to a database, where users can add, modify, and remove their information.</p>
-						<a href="DBMS.html" class="stretched-link"></a>
+						<a href="https://github.com/sebfuoco/Database-Management-System" class="stretched-link"></a>
 					</div>
 				</div>
 				<div class="card">
-					<img class="card-img-top lazyload" data-src="Images\Game.jpg" srcset="Images\Game.jpg 480w, Images\Game.jpg 1400w" sizes="50vw" alt="Card image cap">
+					<img class="card-img-top lazyload" data-src="Images\Game.jpg" alt="Card image cap">
 					<div class="card-body text-left small">
 						<h4 class="card-title">Tile Based Game</h4>
 						<p class="card-text">This game is a tile based game with RPG elements.</p>
-						<a href="Game.html" class="stretched-link"></a>
+						<a href="https://github.com/sebfuoco/RPG-Game" class="stretched-link"></a>
 					</div>
 				</div>
 			</div><hr>
@@ -121,14 +119,12 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 			<h1 class="display-4">Education</h1>
 			<div class="lead">2018-2021 University Centre Farnborough</div>
 			<p>BSc Computing: N/A<br>
-			HND Computing: N/A<br>
+			HND Computing: D<br>
 			HNC Computing: D
 			</p>
 			<div class="lead">2016-2018	Woking College</div>
 			<p>IT BTEC Diploma: D*D*<br>
-			A-Level Electronics: A</p>
-			<div class="lead">2012-2016	Tomlinscote School</div>
-			<p> 6 GCSES: grade C and above</p><hr>
+			A-Level Electronics: A</p><hr>
 		</div>
 	</div>
 	<div class="row fade-in">
@@ -241,9 +237,3 @@ $(document).ready(function() {
 });
 </script>
 </html>
-<!-- References
-Navbar = https://getbootstrap.com/docs/4.1/components/navbar/
-Container = https://getbootstrap.com/docs/4.3/layout/grid/
-Cards = https://getbootstrap.com/docs/4.0/components/card/
-Navs = https://getbootstrap.com/docs/4.0/components/navs/
--->
