--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 <title>Home</title>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<div class="navbar-brand">Online Apps</div>
+	<div class="navbar-brand">Portfolio</div>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -107,7 +107,8 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 					<img class="card-img-top lazyload" data-src="Images\Game.jpg" alt="Card image cap">
 					<div class="card-body text-left small">
 						<h4 class="card-title">Tile Based Game</h4>
-						<p class="card-text">This game is a tile based game with RPG elements.</p>
+						<p class="card-text">This game is a tile based game with RPG elements, that runs on terminal
+						using text-based graphics.</p>
 						<a href="https://github.com/sebfuoco/RPG-Game" class="stretched-link"></a>
 					</div>
 				</div>
@@ -118,9 +119,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 		<div class="col">
 			<h1 class="display-4">Education</h1>
 			<div class="lead">2018-2021 University Centre Farnborough</div>
-			<p>BSc Computing: N/A<br>
-			HND Computing: D<br>
-			HNC Computing: D
+			<p>BSc Computing (Predicted Grade): 2:1<br>
 			</p>
 			<div class="lead">2016-2018	Woking College</div>
 			<p>IT BTEC Diploma: D*D*<br>
@@ -130,7 +129,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 	<div class="row fade-in">
 		<div class="col">
 			<h1 class="display-4">Work Experience</h1>	
-			<div class="lead">2019+ Woking Lawn & Croquet Club</div>
+			<div class="lead">2019 Woking Lawn & Croquet Club</div>
 			<p>Kitchen Staff: Duties include opening up bar, closing bar, cooking, bartending, stocking, and cleaning.</p>
 			<div class="lead">2017 Woking College</div>
 			<p>IT Support Assistant: Duties include replacing printer toners and troubleshooting computers.</p>
@@ -148,7 +147,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 					</div>
 					<div class="col-md-10 align-self-center">
 						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">advanced</div>
+							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">+5 years</div>
 						</div>
 					</div>
 				</div>
@@ -158,7 +157,17 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 					</div>
 					<div class="col-md-10 align-self-center">
 						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
+							<div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">3 years</div>
+						</div>
+					</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">HTML + CSS</p>
+					</div>
+					<div class="col-md-10 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">3 years</div>
 						</div>
 					</div>
 				</div>
@@ -168,37 +177,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 					</div>
 					<div class="col-md-10 align-self-center">
 						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
-						</div>
-					</div>
-				</div>
-				<div class="row pb-2">
-					<div class="col">
-						<p class="lead">C++/C#</p>
-					</div>
-					<div class="col-md-10 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
-						</div>
-					</div>
-				</div>
-				<div class="row pb-2">
-					<div class="col">
-						<p class="lead">HTML</p>
-					</div>
-					<div class="col-md-10 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">advanced</div>
-						</div>
-					</div>
-				</div>
-				<div class="row pb-2">
-					<div class="col">
-						<p class="lead">CSS</p>
-					</div>
-					<div class="col-md-10 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
+							<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">2 years</div>
 						</div>
 					</div>
 				</div>
@@ -208,7 +187,37 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 					</div>
 					<div class="col-md-10 align-self-center">
 						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
+							<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">1 year</div>
+						</div>
+					</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">C#</p>
+					</div>
+					<div class="col-md-10 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"><1 year</div>
+						</div>
+					</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">PHP</p>
+					</div>
+					<div class="col-md-10 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"><1 year</div>
+						</div>
+					</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">SQL</p>
+					</div>
+					<div class="col-md-10 pb-3 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"><1 year</div>
 						</div>
 					</div>
 				</div>
