--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 		<div class="col">
 			<h1 class="display-4">Education</h1>
 			<div class="lead">2018-2021 University Centre Farnborough</div>
-			<p>BSc Computing (Predicted Grade): 2:1<br>
+			<p>BSc Computing: 1st<br>
 			</p>
 			<div class="lead">2016-2018	Woking College</div>
 			<p>IT BTEC Diploma: D*D*<br>
@@ -183,7 +183,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 				</div>
 				<div class="row pb-2">
 					<div class="col">
-						<p class="lead">JavaScript</p>
+						<p class="lead">JavaScript + ReactJS</p>
 					</div>
 					<div class="col-md-10 align-self-center">
 						<div class="progress" style="height:2.25vw;">
@@ -214,6 +214,16 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 				<div class="row pb-2">
 					<div class="col">
 						<p class="lead">SQL</p>
+					</div>
+					<div class="col-md-10 pb-3 align-self-center">
+						<div class="progress" style="height:2.25vw;">
+							<div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"><1 year</div>
+						</div>
+					</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">Assembly Language</p>
 					</div>
 					<div class="col-md-10 pb-3 align-self-center">
 						<div class="progress" style="height:2.25vw;">
