--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 			<div class="lead">2017 Woking College</div>
 			<p>IT Support Assistant: Duties include replacing printer toners and troubleshooting computers.</p>
 			<div class="lead">2015 Tomlinscote School</div>
-			<p>IT Support Assistant: Duties include setting up computers, installing software on computers, and installing devices on the campus.</p><hr>
+			<p>IT Support Assistant: Duties include setting up computers, installing software on computers, and installing devices on the campus. <br>Lead implementation of an iPad scheme to students, setting them up for academic use.</p><hr>
 		</div>
 	</div>
 	<div class="row fade-in">
@@ -183,7 +183,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 				</div>
 				<div class="row pb-2">
 					<div class="col">
-						<p class="lead">JavaScript + ReactJS</p>
+						<p class="lead">JavaScript</p>
 					</div>
 					<div class="col-md-10 align-self-center">
 						<div class="progress" style="height:2.25vw;">
@@ -214,16 +214,6 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 				<div class="row pb-2">
 					<div class="col">
 						<p class="lead">SQL</p>
-					</div>
-					<div class="col-md-10 pb-3 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"><1 year</div>
-						</div>
-					</div>
-				</div>
-				<div class="row pb-2">
-					<div class="col">
-						<p class="lead">Assembly Language</p>
 					</div>
 					<div class="col-md-10 pb-3 align-self-center">
 						<div class="progress" style="height:2.25vw;">
