--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 <title>Home</title>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<div class="navbar-brand">Portfolio</div>
+	<a href="index.html"><div class="navbar-brand">Portfolio</div></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
