--- a/VisualSort.html
+++ b/VisualSort.html
@@ -1,77 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<style>
-p {
-	font-size: 2vh;
-}
-.vl {
-	border-left: 1px solid black;
-}
-<!-- Slider -->
-.slidecontainer {
-	width: 10%;
-}
-
-.slider {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 2.5vh;
-  border-radius: 5px;  
-  background: #d3d3d3;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-}
-
-.slider-colour{
-	background: #a3a3a3;
-}
-
-.slider:hover {
-  opacity: 1;
-}
-
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;  
-  background: #4CAF50;
-  cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;  
-  background: #4CAF50;
-  cursor: pointer;
-}
-
-* {
-  border-radius: 0 !important;
-}
-
-::-webkit-scrollbar {
-    display: none;
-}
-
-.dropdown-menu.dropdown-menu-wide {
-  min-width: 100%;
-  text-align: center;
-  font-size: 2vh;
-}
 </style>
-<!-- BootStrap code from copied/modified from BootStrap documentation -->
 <meta charset="utf-8">
 <meta name="google-site-verification" content="57ojS5ZUvzfapLNXZ3loOraMw3dSHtMuVi8pMCyi410" /> <!-- Google Search Console -->
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
 integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+<link rel="stylesheet" href="css/VisualSort.css">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
 integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
@@ -126,342 +62,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 	</div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<script>
-// Array Slider
-var arrayRange = document.getElementById("ArrayChange");
-var output = document.getElementById("value");
-output.innerHTML = arrayRange.value;
-arrayRange.oninput = function(){output.innerHTML = this.value;}
-
-// Speed Slider
-var speedRange = document.getElementById("SpeedChange");
-var speed = document.getElementById("speed");
-speed.innerHTML = speedRange.value;
-speedRange.oninput = function(){speed.innerHTML = this.value;}
-
-// Canvas
-var height = [];
-var swaps = 0; var compares = 0;
-var randomArray = "False";
-
-function nullifier(){
-	swaps = 0; compares = 0;
-	document.getElementById("numOfSwaps").innerHTML = null;
-	document.getElementById("numOfComp").innerHTML = null;
-}
-// fill array with random numbers so that array is unsorted
-function fillArray(){
-	var setHeight = [100, 90, 44, 58, 95, 40, 50, 1, 5, 54, 41, 19, 11,
- 	21, 91, 75, 82, 2, 10, 29, 24, 13, 30, 94, 71, 43, 11, 54, 76, 75,
- 	86, 14, 43, 22, 11, 23, 91, 95, 43, 31, 13, 97, 85, 42, 45, 56, 59,
- 	91, 44, 22];
-	height = [];
-	if (randomArray == "True"){
-		for (var i = 0; i < arrayRange.value; i++){
-			height.push(Math.floor(Math.random()*100));
-		}
-	}
-	else {
-		for (var i = 0; i < arrayRange.value; i++) {
-			height.push(setHeight[i]);
-		}
-	}
-}
-
-function draw(type){
-	if (type == "numberChange"){
-		for (var i = 0, j = height.length; i < j; i++){
-        	Sort.data.datasets[0].data.pop();
-        }
-        fillArray();
-        for (var i = 0; i < height.length; i++){
-        	Sort.data.datasets[0].data.push(height[i]);
-        }
-	}
-	else {
-		fillArray();
-		for (var i = 0; i < height.length; i++){
-       		Sort.data.datasets[0].data[i] = height[i]; 
-		}
-	}
-	Sort.update();
-}
-
-fillArray();
-var colours = ['#4e73df', '#1cc88a', '#36b9cc', '#eb4034', '#ffce56', '#9966ff', '#d99b00','#f04dea'];
-// bar graph
-var ctx = document.getElementById('Sort').getContext('2d');
-var Sort = new Chart(ctx, {
-    type: 'bar',
-    data: {
-        labels: height,
-        datasets: [{
-            label: 'Sorting Visualiser',
-            data: height,
-            backgroundColor: ["#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034", "#eb4034"],
-        }],
-    },
-    options: {
-    	tooltips: {
-        	enabled: false
-    	},
-    	maintainAspectRatio: false,
-    	legend: {
-        	display: false
-      	},
-      	layout: {
-        	padding: {
-        		left: 10,
-          		right: 25
-        	},
-      	},
-        scales: {
-            xAxes: [{
-            	gridLines: {
-              		display: false,
-                	drawBorder: false
-              	},
-              	ticks: {
-              		display: false,
-              	},
-            }],
-            yAxes: [{
-                ticks: {
-                    beginAtZero: true,
-                },
-                gridLines: {
-                    color: "rgb(234, 236, 244)",
-                    zeroLineColor: "rgb(234, 236, 244)",
-                    drawBorder: false,
-                    borderDash: [2],
-                    zeroLineBorderDash: [2]
-                }
-            }]
-        }
-    }
-});
-// Sorting Algorithms
-async function bubbleSort(){
-	var len = height.length;
-	for (var i = len-1; i>=0; i--){
-		for(var j = 1; j<=i; j++){
-			if(height[j-1] > height[j]){
-				var temp = height[j-1];
-				height[j-1] = height[j];
-				height[j] = temp;
-       			Sort.data.datasets[0].data[j] = height[j]; 
-       			Sort.data.datasets[0].data[j-1] = height[j-1];
-       			Sort.data.datasets[0].backgroundColor[j] = "green";
-				Sort.data.datasets[0].backgroundColor[j - 1] = "blue";
-				Sort.update();
-				await sleep(speedRange.value);
-				Sort.data.datasets[0].backgroundColor[j] = "#eb4034";
-				Sort.data.datasets[0].backgroundColor[j - 1] = "#eb4034";
-       			Sort.update();
-				await sleep(speedRange.value);
-				document.getElementById("numOfSwaps").innerHTML = swaps += 1;
-			}
-			document.getElementById("numOfComp").innerHTML = compares += 1;
-        }
-    }
-} 
-
-async function selectionSort(){
-	var minIdx, temp, len = height.length;
-	for(var i = 0; i < len; i++){
-		minIdx = i;
-		for(var j = i+1; j<len; j++){
-			Sort.data.datasets[0].backgroundColor[i] = "blue";
-			Sort.data.datasets[0].backgroundColor[minIdx] = "green";
-			Sort.update();
-			if(height[j] < height[minIdx]){
-				await sleep(speedRange.value);
-				Sort.data.datasets[0].backgroundColor[minIdx] = "#eb4034";
-				Sort.update();
-				minIdx = j;
-				document.getElementById("numOfSwaps").innerHTML = swaps += 1;	
-			}
-			document.getElementById("numOfComp").innerHTML = compares += 1;
-		}
-		Sort.data.datasets[0].backgroundColor[i] = "#eb4034";
-		temp = height[i];
-		height[i] = height[minIdx];
-		height[minIdx] = temp;
-		Sort.data.datasets[0].data[i] = height[i];
-		Sort.data.datasets[0].data[minIdx] = height[minIdx];
-		Sort.data.datasets[0].backgroundColor[minIdx] = "#eb4034";
-		Sort.update();
-		document.getElementById("numOfSwaps").innerHTML = swaps += 1;
-	}
-}
-
-async function insertionSort(height){
-  	for(let i = 1; i < height.length; i++){
-	    let j = i - 1;
-	    let temp = height[i];
-	    while(j >= 0 && height[j] > temp){
-	    	height[j + 1] = height[j];
-	    	Sort.data.datasets[0].data[j + 1] = height[j];
-	    	Sort.data.datasets[0].backgroundColor[j + 1] = "green";
-	    	Sort.data.datasets[0].backgroundColor[j] = "blue";
-	    	Sort.update();
-	    	await sleep(speedRange.value);
-	    	Sort.data.datasets[0].backgroundColor[j] = "#eb4034";
-	    	Sort.data.datasets[0].backgroundColor[j + 1] = "#eb4034";
-	      	j--;
-	      	document.getElementById("numOfSwaps").innerHTML = swaps += 1;	
-	      	document.getElementById("numOfComp").innerHTML = compares += 1;
-	   	}
-	   	height[j + 1] = temp;
-	   	Sort.data.datasets[0].data[j + 1] = temp;
-	   	document.getElementById("numOfComp").innerHTML = compares += 1;
-	}
-	Sort.update();
-}
-
-async function mergeSort(height) { // Bottom Up Merge sort
-	var sorted = height.slice(),
-		n = sorted.length,
-		buffer = new Array(n);
-	for (var size = 1; size < n; size *= 2) {
-		for (var leftStart = 0; leftStart < n; leftStart += 2*size) {
-			var left = leftStart,
-				right = Math.min(left + size, n),
-				leftLimit = right,
-				rightLimit = Math.min(right + size, n),
-				i = left;
-			while (left < leftLimit && right < rightLimit) {
-				if (sorted[left] <= sorted[right]) {
-					Sort.data.datasets[0].data[i] = sorted[left];
-					mergeSwap(i);
-					buffer[i++] = sorted[left++];
-				} else {
-					Sort.data.datasets[0].data[i] = sorted[right];
-					mergeSwap(i);
-					buffer[i++] = sorted[right++];
-				}	
-				document.getElementById("numOfSwaps").innerHTML = swaps += 1;
-				document.getElementById("numOfComp").innerHTML = compares += 1;
-			}
-			while (left < leftLimit) {
-				Sort.data.datasets[0].data[i] = sorted[left];
-				Sort.update();
-				await sleep(speedRange.value);
-				buffer[i++] = sorted[left++];
-				document.getElementById("numOfComp").innerHTML = compares += 1;
-			}
-			while (right < rightLimit) {
-				Sort.data.datasets[0].data[i] = sorted[right];
-				Sort.update();
-				await sleep(speedRange.value);
-				buffer[i++] = sorted[right++];
-				document.getElementById("numOfComp").innerHTML = compares += 1;
-			}
-		}
-		var temp = sorted,
-			sorted = buffer,
-			buffer = temp;
-	}
-	console.log(sorted);
-}
-
-async function mergeSwap(i){
-	Sort.data.datasets[0].backgroundColor[i] = "blue";
-	Sort.data.datasets[0].backgroundColor[i + 1] = "green";
-	Sort.update();
-	await sleep(speedRange.value);
-	Sort.data.datasets[0].backgroundColor[i] = "#eb4034";
-	Sort.data.datasets[0].backgroundColor[i+ 1] = "#eb4034";
-}
-
-async function quickSort(height, left, right){ 
-   	var len = height.length, 
-   	pivot,
-   	partitionIndex;
-   	document.getElementById("numOfComp").innerHTML = compares += 1;
-  	if(left < right){
-    	pivot = right;
-    	partitionIndex = await partition(height, pivot, left, right);
-   		//sort left and right
-   		await quickSort(height, left, partitionIndex - 1);
-   		await quickSort(height, partitionIndex + 1, right);
-  	}
-  	return height;
-}
-
-async function partition(height, pivot, left, right){ 
-   	var pivotValue = height[pivot],
-    	partitionIndex = left;
-	for(var i = left; i < right; i++){
-   		if(height[i] < pivotValue){
-	      	await swap(height, i, partitionIndex);
-	      	partitionIndex++;	
-	      	document.getElementById("numOfSwaps").innerHTML = swaps += 1;
-    	}
-    	document.getElementById("numOfComp").innerHTML = compares += 1;
-  	}
-	await swap(height, right, partitionIndex);
-	document.getElementById("numOfSwaps").innerHTML = swaps += 1;
-	return partitionIndex;
-}
-
-async function swap(height, i, j){ 
-	var temp = height[i];
-	height[i] = height[j];
-	height[j] = temp;
-	Sort.data.datasets[0].backgroundColor[j] = "blue";
-	Sort.data.datasets[0].backgroundColor[i] = "green";
-	Sort.data.datasets[0].data[i] = height[i];
-	Sort.data.datasets[0].data[j] = height[j];
-	Sort.update();
-	await sleep(speedRange.value);
-	Sort.data.datasets[0].backgroundColor[j] = "#eb4034";
-	Sort.data.datasets[0].backgroundColor[i] = "#eb4034";
-	Sort.update();
-}
-// Waits a select period of time
-function sleep(ms) {
-  return new Promise(resolve => setTimeout(resolve, ms));
-}
-
-$(document).ready(function(){
-	$("#RandomArray").click(function() {
-		nullifier();
-		randomArray = "True";
-		draw("");
-	});
-	$("#Array").click(function() {
-		nullifier();
-		randomArray = "False";
-		draw("");
-	});
-	// Sorting algorithms
-	$("#ArrayChange").change(function() {
-		nullifier();
-		draw("numberChange");
-	});
-	$("#BubbleSort").click(function(){
-		nullifier();
-		bubbleSort();
-	});
-	$("#SelectionSort").click(function(){
-		nullifier();
-		selectionSort();
-	});
-	$("#InsertionSort").click(function(){
-		nullifier();
-		insertionSort(height);
-	});
-	$("#MergeSort").click(function(){
-		nullifier();
-		mergeSort(height);
-	});
-	$("#QuickSort").click(function(){
-		nullifier();
-		quickSort(height, 0, (height.length - 1));
-	});
-});
-</script>
+<script src="js/VisualSort.js"></script>
 </body>
 </html>
 <!-- References
