--- a/index.html
+++ b/index.html
@@ -1,53 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<style>
-p {
-	font-size: 2vh;
-}
-
-.lead {
-	font-size: 3vh;
-}
-
-.display-4 {
-	margin-top: -0.5rem;
-}
-
-.nav-link {
-	color: black;
-}
-
-.card-text {
-	opacity: 0.6;
-}
-
-.card-img-top {
-	object-fit: cover;  
-    width: 100%;
-    height: 50vh;
-    overflow: hidden;
-}
-
-::-webkit-scrollbar {
-    display: none;
-}
-
-.fade-in
-{
-    opacity:0;
-}
-div.hidden {
-    display: none;
-}
-</style>
-<!-- BootStrap code from copied/modified from BootStrap documentation -->
 <meta charset="utf-8">
 <meta name="google-site-verification" content="57ojS5ZUvzfapLNXZ3loOraMw3dSHtMuVi8pMCyi410" /> <!-- Google Search Console -->
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="css/index.css"/>
 <link rel="stylesheet preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
 integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
 <script
   src="https://code.jquery.com/jquery-3.5.1.js"
   integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
@@ -71,7 +30,6 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 		</div>
 	</div>
 </nav>
-<!-- Body Container -->
 <div class="container-fluid justify-content-center text-center bg-light text">
 	<div class="row hidden">
 		<div class="col">
@@ -117,132 +75,156 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 	</div>
 	<div class="row fade-in">
 		<div class="col">
+			<h1 class="display-4">Experience</h1>	
+			<div class="lead">2023 - Present: Activate Group</div>
+			<p>Software Developer:</p>
+			<p>● Worked on various projects, ranging from legacy software in .NET to websites using
+				Blazor and React.</p>
+			<p>● Created and worked independently on greenfield projects which streamlined company
+				processes and reduced call handler times by 30%.</p>
+			<p>● Conducted unit testing on all projects, refactoring code, optimising and improving
+				codebases.</p>
+			<p>● Refactoring and improving existing codebases, improving code quality and increasing
+				maintainability.</p>
+			<p>● Collaborated with peers to solicit feedback and resolve issues together.</p>
+			<div class="lead">2021-2022: Vocala</div>
+			<p>Graduate Software Developer:</p>
+			<p>● Worked on both front-end and back-end for software projects, working on
+				individual projects as well as maintaining and creating websites for clients.</p>
+			<p>● Communicating and updating clients about support tickets, as well as answering any
+				enquiries.</p>
+			<p>● Created automation scripts for both in house and clients that sped up work processes.</p>
+			<p>● Worked within an agile environment, completing tickets during each sprint.</p>
+		</div>
+	</div>
+	<hr>
+	<div class="row fade-in">
+		<div class="col">
 			<h1 class="display-4">Education</h1>
 			<div class="lead">2018-2021 University Centre Farnborough</div>
 			<p>BSc Computing: 1st<br>
 			</p>
 			<div class="lead">2016-2018	Woking College</div>
 			<p>IT BTEC Diploma: D*D*<br>
-			A-Level Electronics: A</p><hr>
+			A-Level Electronics: A</p>
 		</div>
 	</div>
+	<hr>
 	<div class="row fade-in">
 		<div class="col">
-			<h1 class="display-4">Work Experience</h1>	
-			<div class="lead">2019 Woking Lawn & Croquet Club</div>
-			<p>Kitchen Staff: Duties include opening up bar, closing bar, cooking, bartending, stocking, and cleaning.</p>
-			<div class="lead">2017 Woking College</div>
-			<p>IT Support Assistant: Duties include replacing printer toners and troubleshooting computers.</p>
-			<div class="lead">2015 Tomlinscote School</div>
-			<p>IT Support Assistant: Duties include setting up computers, installing software on computers, and installing devices on the campus. <br>Lead implementation of an iPad scheme to students, setting them up for academic use.</p><hr>
-		</div>
-	</div>
-	<div class="row fade-in">
-		<div class="col">
-			<h1 class="display-4">Skills</h1>	
+			<h1 class="display-4">Languages</h1>	
 			<div class="container">
-				<div class="row pb-2 ">
-					<div class="col">
-						<p class="lead">Office 365</p>
-					</div>
-					<div class="col-md-10 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">+5 years</div>
-						</div>
-					</div>
-				</div>
-				<div class="row pb-2">
-					<div class="col">
-						<p class="lead">Adobe Suite</p>
-					</div>
-					<div class="col-md-10 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">3 years</div>
-						</div>
-					</div>
-				</div>
-				<div class="row pb-2">
-					<div class="col">
-						<p class="lead">HTML + CSS</p>
-					</div>
-					<div class="col-md-10 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">3 years</div>
-						</div>
-					</div>
-				</div>
-				<div class="row pb-2">
-					<div class="col">
-						<p class="lead">Python</p>
-					</div>
-					<div class="col-md-10 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">2 years</div>
-						</div>
-					</div>
-				</div>
-				<div class="row pb-2">
-					<div class="col">
-						<p class="lead">JavaScript</p>
-					</div>
-					<div class="col-md-10 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">1 year</div>
-						</div>
-					</div>
-				</div>
 				<div class="row pb-2">
 					<div class="col">
 						<p class="lead">C#</p>
 					</div>
-					<div class="col-md-10 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"><1 year</div>
-						</div>
+					<div class="col">
+						<p class="lead">HTML</p>
+					</div>
+					<div class="col">
+						<p class="lead">CSS</p>
+					</div>
+					<div class="col">
+						<p class="lead">JS</p>
+					</div>
+					<div class="col">
+						<p class="lead">jQuery</p>
 					</div>
 				</div>
 				<div class="row pb-2">
 					<div class="col">
-						<p class="lead">PHP</p>
+						<p class="lead">MySQL</p>
 					</div>
-					<div class="col-md-10 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"><1 year</div>
-						</div>
+					<div class="col">
+						<p class="lead">MSSQL</p>
+					</div>
+					<div class="col">
+						<p class="lead">TSQL</p>
+					</div>
+					<div class="col">
+						<p class="lead">TypeScript</p>
+					</div>
+					<div class="col">
+						<p class="lead">Python</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<hr>
+
+	<div class="row fade-in">
+		<div class="col">
+			<h1 class="display-4">Frameworks & Libraries</h1>	
+			<div class="container">
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">React</p>
+					</div>
+					<div class="col">
+						<p class="lead">MVC</p>
+					</div>
+					<div class="col">
+						<p class="lead">.NET</p>
+					</div>
+					<div class="col">
+						<p class="lead">.NET Core</p>
+					</div>
+					<div class="col">
+						<p class="lead">Entity Framework</p>
 					</div>
 				</div>
 				<div class="row pb-2">
 					<div class="col">
-						<p class="lead">SQL</p>
+						<p class="lead">Bootstrap</p>
 					</div>
-					<div class="col-md-10 pb-3 align-self-center">
-						<div class="progress" style="height:2.25vw;">
-							<div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"><1 year</div>
-						</div>
+					<div class="col">
+						<p class="lead">ASP.NET</p>
+					</div>
+					<div class="col">
+						<p class="lead">Blazor</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<hr />
+	<div class="row fade-in">
+		<div class="col">
+			<h1 class="display-4">Tools</h1>	
+			<div class="container">
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">Selenium</p>
+					</div>
+					<div class="col">
+						<p class="lead">Git</p>
+					</div>
+					<div class="col">
+						<p class="lead">SQL Server</p>
+					</div>
+					<div class="col">
+						<p class="lead">Azure</p>
+					</div>
+					<div class="col">
+						<p class="lead">Azure DevOps</p>
+					</div>
+				</div>
+				<div class="row pb-2">
+					<div class="col">
+						<p class="lead">REST</p>
+					</div>
+					<div class="col">
+						<p class="lead">Postman</p>
+					</div>
+					<div class="col">
+						<p class="lead">Unit Testing</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+<script src="js/index.js"></script>
 </body>
-<script>
-$(document).ready(function () {
-    $('div.hidden').fadeIn(2000);
-});
-$(document).ready(function() {
-/* Every time the window is scrolled ... */
-	$(window).scroll( function(){
-	    /* Check the location of each desired element */
-	    $('.fade-in').each( function(i){
-	        var bottom_of_object = $(this).position().top + $(this).outerHeight()/3;
-	        var bottom_of_window = $(window).scrollTop() + $(window).height();
-	        /* If the object is completely visible in the window, fade it it */
-	        if( bottom_of_window > bottom_of_object ){
-	            $(this).animate({'opacity':'1'},500);
-	        }    
-	    }); 
-	}); 
-});
-</script>
 </html>
