updated file name

--- a/VisualSort.html
+++ b/VisualSort.html
@@ -62,7 +62,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 	</div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<script src="js/VisualSort.js"></script>
+<script src="js/visualSort.js"></script>
 </body>
 </html>
 <!-- References
